// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Datepicker /w complete 1`] = `
<div
  class="Datepickerstyles__Box-sc-15d4dji-0 dajHNb"
>
  <div
    class="Datepickerstyles__InputBox-sc-15d4dji-1 jpzdav"
  >
    <label
      class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
    >
      <div
        class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
      >
        <div
          class="Inputstyles__Box-hc8ttv-1 bzkyqR"
        >
          <div
            class="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
          >
            <div
              class="Inputstyles__Placeholder-hc8ttv-0 dDQzQZ"
            >
              11.12.1900
            </div>
          </div>
          <input
            aria-invalid="false"
            class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
            value="11.12.1900"
          />
        </div>
      </div>
      <div
        class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
      >
        <svg
          cursor="pointer"
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M10 3v2h4V3h2v2h4a1 1 0 011 1v14a1 1 0 01-1 1H4a1 1 0 01-1-1V6a1 1 0 011-1h4V3h2zm8.999 10h-14L5 19h14l-.001-6zM16 15a1 1 0 110 2 1 1 0 010-2zM8 7H5l-.001 4h14L19 7h-3v2h-2V7h-4v2H8V7z"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;

exports[`Datepicker /w date not in range 1`] = `
<Datepicker
  isCalendarOpen={false}
  maxDate={2020-06-14T21:00:00.000Z}
  minDate={2020-06-01T21:00:00.000Z}
  todayButton={true}
  value={2020-06-16T21:00:00.000Z}
>
  <Datepickerstyles__Box
    onBlur={[Function]}
  >
    <div
      className="Datepickerstyles__Box-sc-15d4dji-0 dajHNb"
      onBlur={[Function]}
    >
      <Datepickerstyles__InputBox
        onClick={[Function]}
      >
        <div
          className="Datepickerstyles__InputBox-sc-15d4dji-1 jpzdav"
          onClick={[Function]}
        >
          <InputDate
            active={false}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            postfix={
              <Calendar
                color="currentColor"
                cursor="pointer"
                onClick={[Function]}
                size="m"
              />
            }
            value={2020-06-16T21:00:00.000Z}
          >
            <InputMask
              active={false}
              blocks={
                Object {
                  "DATE": Object {
                    "mask": [Function],
                    "max": 9998-12-31T21:00:00.000Z,
                    "min": 1899-12-31T21:29:43.000Z,
                  },
                }
              }
              design="outline"
              format={[Function]}
              lazy={true}
              mask="DATE"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              parse={[Function]}
              postfix={
                <Calendar
                  color="currentColor"
                  cursor="pointer"
                  onClick={[Function]}
                  size="m"
                />
              }
              size="l"
              smartPlaceholder="17.06.2020"
              value="17.06.2020"
            >
              <Input
                active={false}
                design="outline"
                onChange={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                onUpdated={[Function]}
                postfix={
                  <Calendar
                    color="currentColor"
                    cursor="pointer"
                    onClick={[Function]}
                    size="m"
                  />
                }
                size="l"
                smartPlaceholder="17.06.2020"
                value="17.06.2020"
              >
                <InputWrapper
                  active={false}
                  design="outline"
                  size="l"
                >
                  <Inputstyles__Wrapper
                    active={false}
                    design="outline"
                    size="l"
                  >
                    <label
                      className="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
                      size="l"
                    >
                      <Inputstyles__Wrapped>
                        <div
                          className="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
                        >
                          <NativeInput
                            active={false}
                            aria-invalid={false}
                            design="outline"
                            key=".1"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            onKeyPress={[Function]}
                            onUpdated={[Function]}
                            size="l"
                            smartPlaceholder="17.06.2020"
                            value="17.06.2020"
                          >
                            <Inputstyles__Box>
                              <div
                                className="Inputstyles__Box-hc8ttv-1 bzkyqR"
                              >
                                <Inputstyles__PlaceholderWrapper>
                                  <div
                                    className="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
                                  >
                                    <Inputstyles__Placeholder
                                      design="outline"
                                      size="l"
                                    >
                                      <div
                                        className="Inputstyles__Placeholder-hc8ttv-0 dDQzQZ"
                                        size="l"
                                      >
                                        <Inputstyles__Invisible>
                                          <span
                                            className="Inputstyles__Invisible-hc8ttv-8 bCdWvB"
                                          >
                                            17.06.2020
                                          </span>
                                        </Inputstyles__Invisible>
                                        <span />
                                      </div>
                                    </Inputstyles__Placeholder>
                                  </div>
                                </Inputstyles__PlaceholderWrapper>
                                <Inputstyles__StyledInput
                                  active={false}
                                  aria-invalid={false}
                                  design="outline"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onFocus={[Function]}
                                  onKeyPress={[Function]}
                                  onScroll={[Function]}
                                  size="l"
                                  value="17.06.2020"
                                >
                                  <input
                                    aria-invalid={false}
                                    className="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    onFocus={[Function]}
                                    onKeyPress={[Function]}
                                    onScroll={[Function]}
                                    size="l"
                                    value="17.06.2020"
                                  />
                                </Inputstyles__StyledInput>
                              </div>
                            </Inputstyles__Box>
                          </NativeInput>
                        </div>
                      </Inputstyles__Wrapped>
                      <Inputstyles__Postfix
                        active={false}
                        size="l"
                      >
                        <div
                          className="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
                          size="l"
                        >
                          <Calendar
                            color="currentColor"
                            cursor="pointer"
                            key=".2"
                            onClick={[Function]}
                            size="m"
                          >
                            <svg
                              cursor="pointer"
                              fill="currentColor"
                              height={20}
                              onClick={[Function]}
                              viewBox="0 0 24 24"
                              width={20}
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <defs />
                              <path
                                d="M10 3v2h4V3h2v2h4a1 1 0 011 1v14a1 1 0 01-1 1H4a1 1 0 01-1-1V6a1 1 0 011-1h4V3h2zm8.999 10h-14L5 19h14l-.001-6zM16 15a1 1 0 110 2 1 1 0 010-2zM8 7H5l-.001 4h14L19 7h-3v2h-2V7h-4v2H8V7z"
                              />
                            </svg>
                          </Calendar>
                        </div>
                      </Inputstyles__Postfix>
                    </label>
                  </Inputstyles__Wrapper>
                </InputWrapper>
              </Input>
            </InputMask>
          </InputDate>
        </div>
      </Datepickerstyles__InputBox>
    </div>
  </Datepickerstyles__Box>
</Datepicker>
`;

exports[`Datepicker /w date not in range and not fix value 1`] = `
<Datepicker
  isCalendarOpen={false}
  maxDate={2020-06-14T21:00:00.000Z}
  minDate={2020-06-01T21:00:00.000Z}
  todayButton={true}
  value={2020-06-16T21:00:00.000Z}
>
  <Datepickerstyles__Box
    onBlur={[Function]}
  >
    <div
      className="Datepickerstyles__Box-sc-15d4dji-0 dajHNb"
      onBlur={[Function]}
    >
      <Datepickerstyles__InputBox
        onClick={[Function]}
      >
        <div
          className="Datepickerstyles__InputBox-sc-15d4dji-1 jpzdav"
          onClick={[Function]}
        >
          <InputDate
            active={false}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            postfix={
              <Calendar
                color="currentColor"
                cursor="pointer"
                onClick={[Function]}
                size="m"
              />
            }
            value={2020-06-16T21:00:00.000Z}
          >
            <InputMask
              active={false}
              blocks={
                Object {
                  "DATE": Object {
                    "mask": [Function],
                    "max": 9998-12-31T21:00:00.000Z,
                    "min": 1899-12-31T21:29:43.000Z,
                  },
                }
              }
              design="outline"
              format={[Function]}
              lazy={true}
              mask="DATE"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              parse={[Function]}
              postfix={
                <Calendar
                  color="currentColor"
                  cursor="pointer"
                  onClick={[Function]}
                  size="m"
                />
              }
              size="l"
              smartPlaceholder="17.06.2020"
              value="17.06.2020"
            >
              <Input
                active={false}
                design="outline"
                onChange={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                onUpdated={[Function]}
                postfix={
                  <Calendar
                    color="currentColor"
                    cursor="pointer"
                    onClick={[Function]}
                    size="m"
                  />
                }
                size="l"
                smartPlaceholder="17.06.2020"
                value="17.06.2020"
              >
                <InputWrapper
                  active={false}
                  design="outline"
                  size="l"
                >
                  <Inputstyles__Wrapper
                    active={false}
                    design="outline"
                    size="l"
                  >
                    <label
                      className="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
                      size="l"
                    >
                      <Inputstyles__Wrapped>
                        <div
                          className="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
                        >
                          <NativeInput
                            active={false}
                            aria-invalid={false}
                            design="outline"
                            key=".1"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            onKeyPress={[Function]}
                            onUpdated={[Function]}
                            size="l"
                            smartPlaceholder="17.06.2020"
                            value="17.06.2020"
                          >
                            <Inputstyles__Box>
                              <div
                                className="Inputstyles__Box-hc8ttv-1 bzkyqR"
                              >
                                <Inputstyles__PlaceholderWrapper>
                                  <div
                                    className="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
                                  >
                                    <Inputstyles__Placeholder
                                      design="outline"
                                      size="l"
                                    >
                                      <div
                                        className="Inputstyles__Placeholder-hc8ttv-0 dDQzQZ"
                                        size="l"
                                      >
                                        <Inputstyles__Invisible>
                                          <span
                                            className="Inputstyles__Invisible-hc8ttv-8 bCdWvB"
                                          >
                                            17.06.2020
                                          </span>
                                        </Inputstyles__Invisible>
                                        <span />
                                      </div>
                                    </Inputstyles__Placeholder>
                                  </div>
                                </Inputstyles__PlaceholderWrapper>
                                <Inputstyles__StyledInput
                                  active={false}
                                  aria-invalid={false}
                                  design="outline"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onFocus={[Function]}
                                  onKeyPress={[Function]}
                                  onScroll={[Function]}
                                  size="l"
                                  value="17.06.2020"
                                >
                                  <input
                                    aria-invalid={false}
                                    className="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    onFocus={[Function]}
                                    onKeyPress={[Function]}
                                    onScroll={[Function]}
                                    size="l"
                                    value="17.06.2020"
                                  />
                                </Inputstyles__StyledInput>
                              </div>
                            </Inputstyles__Box>
                          </NativeInput>
                        </div>
                      </Inputstyles__Wrapped>
                      <Inputstyles__Postfix
                        active={false}
                        size="l"
                      >
                        <div
                          className="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
                          size="l"
                        >
                          <Calendar
                            color="currentColor"
                            cursor="pointer"
                            key=".2"
                            onClick={[Function]}
                            size="m"
                          >
                            <svg
                              cursor="pointer"
                              fill="currentColor"
                              height={20}
                              onClick={[Function]}
                              viewBox="0 0 24 24"
                              width={20}
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <defs />
                              <path
                                d="M10 3v2h4V3h2v2h4a1 1 0 011 1v14a1 1 0 01-1 1H4a1 1 0 01-1-1V6a1 1 0 011-1h4V3h2zm8.999 10h-14L5 19h14l-.001-6zM16 15a1 1 0 110 2 1 1 0 010-2zM8 7H5l-.001 4h14L19 7h-3v2h-2V7h-4v2H8V7z"
                              />
                            </svg>
                          </Calendar>
                        </div>
                      </Inputstyles__Postfix>
                    </label>
                  </Inputstyles__Wrapper>
                </InputWrapper>
              </Input>
            </InputMask>
          </InputDate>
        </div>
      </Datepickerstyles__InputBox>
    </div>
  </Datepickerstyles__Box>
</Datepicker>
`;

exports[`Datepicker /w invalid 1`] = `
<div
  class="Datepickerstyles__Box-sc-15d4dji-0 dajHNb"
>
  <div
    class="Datepickerstyles__InputBox-sc-15d4dji-1 jpzdav"
  >
    <label
      class="Inputstyles__Wrapper-hc8ttv-6 iaA-dFS"
    >
      <div
        class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
      >
        <div
          class="Inputstyles__Box-hc8ttv-1 bzkyqR"
        >
          <div
            class="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
          >
            <div
              class="Inputstyles__Placeholder-hc8ttv-0 dDQzQZ"
            >
              ДД.ММ.ГГГГ
            </div>
          </div>
          <input
            aria-invalid="true"
            class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
            value=""
          />
        </div>
      </div>
      <div
        class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
      >
        <svg
          cursor="pointer"
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M10 3v2h4V3h2v2h4a1 1 0 011 1v14a1 1 0 01-1 1H4a1 1 0 01-1-1V6a1 1 0 011-1h4V3h2zm8.999 10h-14L5 19h14l-.001-6zM16 15a1 1 0 110 2 1 1 0 010-2zM8 7H5l-.001 4h14L19 7h-3v2h-2V7h-4v2H8V7z"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;

exports[`Datepicker /w not complete 1`] = `
<div
  class="Datepickerstyles__Box-sc-15d4dji-0 dajHNb"
>
  <div
    class="Datepickerstyles__InputBox-sc-15d4dji-1 jpzdav"
  >
    <label
      class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
    >
      <div
        class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
      >
        <div
          class="Inputstyles__Box-hc8ttv-1 bzkyqR"
        >
          <div
            class="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
          >
            <div
              class="Inputstyles__Placeholder-hc8ttv-0 dDQzQZ"
            >
              22.02.ГГГГ
            </div>
          </div>
          <input
            aria-invalid="false"
            class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
            value="22.02"
          />
        </div>
      </div>
      <div
        class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
      >
        <svg
          cursor="pointer"
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M10 3v2h4V3h2v2h4a1 1 0 011 1v14a1 1 0 01-1 1H4a1 1 0 01-1-1V6a1 1 0 011-1h4V3h2zm8.999 10h-14L5 19h14l-.001-6zM16 15a1 1 0 110 2 1 1 0 010-2zM8 7H5l-.001 4h14L19 7h-3v2h-2V7h-4v2H8V7z"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;

exports[`Datepicker 1`] = `
<div
  class="Datepickerstyles__Box-sc-15d4dji-0 dajHNb"
>
  <div
    class="Datepickerstyles__InputBox-sc-15d4dji-1 jpzdav"
  >
    <label
      class="Inputstyles__Wrapper-hc8ttv-6 daAZxl"
    >
      <div
        class="Inputstyles__Wrapped-hc8ttv-5 lhoBGY"
      >
        <div
          class="Inputstyles__Box-hc8ttv-1 bzkyqR"
        >
          <div
            class="Inputstyles__PlaceholderWrapper-hc8ttv-7 frQCmf"
          >
            <div
              class="Inputstyles__Placeholder-hc8ttv-0 dDQzQZ"
            >
              ДД.ММ.ГГГГ
            </div>
          </div>
          <input
            aria-invalid="false"
            class="Inputstyles__StyledInput-hc8ttv-2 bUBKOu"
            value=""
          />
        </div>
      </div>
      <div
        class="Inputstyles__Postfix-hc8ttv-4 dvGfwK"
      >
        <svg
          cursor="pointer"
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M10 3v2h4V3h2v2h4a1 1 0 011 1v14a1 1 0 01-1 1H4a1 1 0 01-1-1V6a1 1 0 011-1h4V3h2zm8.999 10h-14L5 19h14l-.001-6zM16 15a1 1 0 110 2 1 1 0 010-2zM8 7H5l-.001 4h14L19 7h-3v2h-2V7h-4v2H8V7z"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;
